# Pyng-3d

./: .gitmodules  .travis.yml  ArrayView.h  CMakeLists.txt  CMakeLists.txt.in  Matrix.h  MatrixIterator.h  MatrixIteratorUnitTest.cpp  MatrixUnitTest.cpp  MatrixView.h  PULL_REQUEST_TEMPLATE.md  README.md  Vector.h  matrix3d.h  matrix_base.h  property.h  vector3d.h  vector_base.h
.github/: PULL_REQUEST_TEMPLATE.md
cmake/: FrameworkConfig.cmake
private/: ArrayView_base.h  MatrixView_base.h  Matrix_base.h  Vector_base.h
source/: CMakeLists.txt  include-glm.cmake.in
source/Math/: MathTraits.h  Matrix.h  Vector.dxx  Vector.h
source/Math/private/: DXMapper.h  GLM_Extensions.h  GLM_Mapper.h  GLM_SSE2_constants.inl  GLM_SSE2_converter.inl  GLM_SSE2_extension.inl  GLM_ext.inl  GLM_pure_converter.inl  GLM_pure_extension.inl  GLM_simd_accessors.h  GLM_simd_accessors.inl  GLM_simd_constants.inl  GLM_simd_extension.inl  GLM_vector_geometry.inl  GLM_vector_relational.inl  Matrix_base.h  VectorComparison.inl  VectorManipulation.inl  VectorTransformation.inl  XMMatrixAdapter.inl  XMVectorAdapter.inl  XMVectorIterator.h
source/Utility/: UniquePointer.h
source/Utility/private/: MatrixView_base.h
source/Utils/: Bits.h  Global.h  Memory.h  TypeTraits.h  UniquePointer.h  property.h
source/Utils/private/: ArrayView_base.h  BitsOps_MSVC.h  BitsOps_UNIX.h
source/Utils/private/MSVC/: bitops.inl  bittest.inl  bittestandchange.inl  bittestandreset.inl  bittestandset.inl  clz.inl  ffs.inl  popcnt.inl
source/Utils/private/UNIX/: bitops.inl  bitops_traits.inl  bittest.inl  bittestandchange.inl  bittestandreset.inl  bittestandset.inl  clz.inl  ffs.inl  popcnt.inl
testing/: CMakeLists.txt  CMakeLists.txt.in  include-googletest.cmake.in
testing/Bits/: BitsTest.cpp
testing/Matrix/: MatrixTest.cpp
testing/MatrixIterator/: MatrixIteratorTest.cpp
testing/UniquePointer/: UniquePointerTest.cpp
testing/Vector/: VectorTest.cpp
